--- a/percobaan_app/pubspec.yaml
+++ b/percobaan_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
@@ -101,6 +102,9 @@ flutter:
         - asset: assets/fonts/Oxygen-Regular.ttf
         - asset: assets/fonts/Oxygen-Bold.ttf
           weight: 700
+
+
+
 
 
 
